Fix realartists/shiphub-cocoa#201 Fix wrapping on MultipleAssignees

--- a/IssueWeb/app/index.css
+++ b/IssueWeb/app/index.css
@@ -121,9 +121,7 @@ i.toggleMultiAssignee {
 .MultipleAssignees {
   padding: 0px;
   margin: 0px;
-  position: relative;
-  top: -2px;
-  height: 20px;
+  margin-top: -2px;
 }
 
 .AssigneesPicker {
@@ -135,8 +133,6 @@ i.toggleMultiAssignee {
   -webkit-user-select: none;
   margin: 0px;
   margin-right: 4px;
-  position: relative;
-  top: -1px;
 }
 
 .AddAssigneesEmpty {
@@ -145,8 +141,6 @@ i.toggleMultiAssignee {
 }
 
 .AssigneeAtom {
-  position: relative;
-  top: -2px;
   margin: 0px;
   padding-left: 8px;
   padding-right: 8px;
@@ -157,6 +151,7 @@ i.toggleMultiAssignee {
   color: white;
   background-color: #0085E4;
   -webkit-user-select: none;
+  white-space: nowrap;
 }
 
 .AssigneeAtomName {
